--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "consign": "^0.1.6",
     "express": "^4.16.2",
     "mailgun-js": "^0.13.1",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "nodemon": "^1.12.5"
   },
   "devDependencies": {},
   "scripts": {
